--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
 
 	<header>
-		<h1>Name</h1>
+		<h1 class="title">Joey Thinkful</h1>
 		<nav>
 			<ul id="menu">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/">About</a></li>
+				<li><a href="/">Portfolio</a></li>
+				<li><a href="/">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
